--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "EFMO Boadilla",
-  "short_name": "EFMO",
+  "short_name": "EFMO Boadilla 'B'",
   "start_url": "/EFMO_BOADILLA/",
   "display": "standalone",
   "background_color": "#ffffff",
